2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* intltool-extract.in (deleted):
	* intltool-update.in (deleted):
	* intltool-merge.in (deleted):
	* po (deleted):
	* po/LINGUAS (deleted):
	* po/es.po (deleted):
	* po/Makevars (deleted):
	* po/POTFILES.in (deleted):
	Remove i18n support

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Added missing build dependency

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* configure.ac:
	* env:
	* env (svn:executable):
	* env (added):
	* env.in (deleted):
	Do not autogenerate 'env' and add genreated files to DISTCLEANFILES
	* flumotion/test/common.py (deleted):
	* flumotion/test/Makefile.am:
	delete autogenerated files

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* configure.ac:
	* flumotion-fragmented-streaming.spec.in:
	* po/es.po:
	* +    flumotion-fragmented-streaming.spec.in (added):
	* flumotion-fragmentedstreaming.spec.in (deleted):
	Fix project name

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_mpegts.py:
	* flumotion/test/test_ts_segmenter.py:
	Use min/max keyframe distance
	* po/Makefile.in.in (deleted):
	Delete autogenerated file

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.py:
	check megtsmux version check and fix warning message
	* po/es.po:
	update Spanish transaltion
	* po (svn:ignore):
	*  (svn:ignore):
	* misc (svn:ignore):
	* flumotion/test (svn:ignore):
	Add more ignores

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	Add intl templates to the dist package
	* flumotion-fragmentedstreaming.spec.in:
	Fix requirements and versions numbers

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* autoregen.sh (deleted):
	Delete autogenerated file
	* Makefile.am: