@@ -1,6 +1,6 @@
-Name:           flumotion-fragmented-streaming
-Version:        0.7.0.1
-Release:        1
+Name:           @PACKAGE@
+Version:        @VERSION@
+Release:        @PACKAGE_VERSION_RELEASE@
 Summary:        Flumotion fragmented streaming support.
 
 Group:          Applications/Internet
@@ -9,13 +9,14 @@ URL:            http://www.flumotion.com/
 Source:         %{name}-%{version}.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root
 
-Requires:       flumotion >= 0.7.0.1
+Requires:       flumotion >= @FLU_REQ@
 Requires:       python-uuid
+Requires:       gst-plugins-bad
 
 BuildRequires:  gettext
 BuildRequires:  intltool
 BuildRequires:  python >= 2.3
-BuildRequires:  flumotion >= 0.7.0.1
+BuildRequires:  flumotion >= @FLU_REQ@
 BuildRequires:  python-uuid
 BuildRequires:  epydoc
 BuildRequires:  pkgconfig
